# views-evaluation

./: README.md  pyproject.toml
.github/workflows/: publish_package.yml
documentation/ADRs/: 001_evaluation_metrics.md  002_evaluation_strategy.md  003_metric_calculation.md  01_evaluation_metrics
examples/: quickstart.ipynb
tests/: test_evaluation_manager.py  test_metric_calculators.py
views_evaluation/evaluation/: evaluation_manager.py  metric_calculation.py  metric_calculators.py  metrics.py  test.ipynb
