[tool.poetry]
name = "views_evaluation"
version = "0.1.1"
description = ""
authors = [
    "Xiaolong Sun <xiaolong.sun@pcr.uu.se>",
    "Borbála Farkas <borbala.farkas@pcr.uu.se>",
    "Dylan Pinheiro <dylpin@prio.org>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.2.2"
pandas = "^1.5.3"
numpy = "^1.25.2"
properscoring = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
