[tool.poetry]
name = "views_evaluation"
version = "0.3.0"
description = ""
authors = [
    "Xiaolong Sun <xiaolong.sun@pcr.uu.se>",
    "Borbála Farkas <borbala.farkas@pcr.uu.se>",
    "Dylan Pinheiro <dylpin@prio.org>"
    ]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
scikit-learn = "^1.6.0"
pandas = "^1.5.3"
numpy = "^1.26.4"
properscoring = "^0.1.0"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
